[package]
name = "cocko_rs"
version = "0.0.3"
authors = ["kwangin.jung <inylove82@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.22"
serde = "1.0.103"
serde_derive = "1.0.103"
serde_json = "1.0"
